--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "complete-react-course",
+  "name": "shopping-cart-project",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +12,7 @@
     "react-scripts": "2.1.8",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "reselect": "^4.0.0"
   },
   "scripts": {
